force-app/main/default/objects/Incentive_Credit__c/fields/Compare_On__c.field-meta.xml
<CustomField>
    <fullName>Compare_On__c</fullName>
    <label>Compare On</label>
    <length>16</length>
    <type>Text</type>
</CustomField>