force-app/main/default/objects/Incentive_Credit__c/fields/Computed_At__c.field-meta.xml
<CustomField>
    <fullName>Computed_At__c</fullName>
    <label>Computed At</label>
    <type>DateTime</type>
</CustomField>