force-app/main/default/objects/Incentive_Credit__c/fields/Focused_Pack__c.field-meta.xml
<CustomField>
    <fullName>Focused_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focused Pack</label>
    <referenceTo>Focused_Pack__c</referenceTo>
    <relationshipLabel>Incentive Credits</relationshipLabel>
    <relationshipName>Incentive_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>