force-app/main/default/objects/Incentive_Credit__c/fields/Matched_Slab__c.field-meta.xml
<CustomField>
    <fullName>Matched_Slab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Slab</label>
    <referenceTo>Incentive_Slab__c</referenceTo>
    <relationshipLabel>Matched Incentive Credits</relationshipLabel>
    <relationshipName>Matched_Incentive_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>