force-app/main/default/objects/Incentive_Credit__c/fields/Secondary_Target__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Target</label>
    <referenceTo>Secondary_Target__c</referenceTo>
    <relationshipLabel>Incentive Credits</relationshipLabel>
    <relationshipName>Incentive_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>