force-app/main/default/objects/Incentive_Credit__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary PBIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>