force-app/main/default/objects/Incentive_Credit__c/fields/Target_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Target_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Criteria</label>
    <referenceTo>Target_Criteria__c</referenceTo>
    <relationshipLabel>Incentive Credits</relationshipLabel>
    <relationshipName>Incentive_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>