force-app/main/default/objects/Incentive_Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Criteria__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Secondary_Target__c</columns>
    <columns>Achievement_Value__c</columns>
    <columns>Achievement_Percent__c</columns>
    <columns>Compare_On__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Matched_Slab__c</columns>
    <columns>Executive__c</columns>
    <columns>Computed_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>